assets/css/styles.css
* {
  box-sizing: border-box;
}
:root {
  --primary-color: #0f1b4c;
}
html,
body {
  scroll-behavior: smooth;
}
html {
  font-size: 62.5%;
}
body {
  font-size: 1.6rem;
  font-family: "poppins", "sans-serif";
}
/* Commom */
a {
  text-decoration: none;
}
.btn {
  display: inline-block;
  min-width: 98px;
  padding: 18px 16px;
  border-radius: 12px;
  background: var(--primary-color);
  font-size: 1.4rem;
  font-weight: 500;
  text-align: center;
  color: #ffffff;
}
.content {
  width: 1110px;
  max-width: calc(100% - 48px);
  margin-left: auto;
  margin-right: auto;
}
.line-clamp {
  display: -webkit-box;
  -webkit-line-clamp: var(--line-clamp, 2);
  -webkit-box-orient: vertical;
  overflow: hidden;
}
/* ============= Header ============ */
.fixed-header {
  background: #e6f0ff;
  padding-top: 26px;
  position: sticky;
  top: -26px;
  z-index: 1;
}
.hero-wrap {
  position: relative;
  display: flex;
  flex-direction: column;
  background: #e6f0ff;
  height: calc(100vh - 90px);
}
.navbar {
  display: flex;
  align-items: center;
  padding: 12px 0;
}
.navbar ul {
  display: flex;
  align-items: center;
  margin-left: 50px;
}
.navbar .actions {
  margin-left: auto;
}
.navbar ul a {
  font-size: 1.4rem;
  font-weight: 500;
  color: #4f5361;
  padding: 8px 1.4rem;
}
.navbar ul a:hover {
  text-decoration: underline;
}
.navbar .action-link {
  color: var(--primary-color);
  font-size: 1.4rem;
  font-weight: 500;
}
.navbar .action-btn {
  padding: 13px 16px;
  margin-left: 18px;
  border-radius: 8px;
}
/* hero */
.hero {
  margin-top: 130px;
}
/* tỷ lệ 559/1110 *100 */
.hero .info {
  width: 51%;
}
.hero .sub-title {
  font-size: 1.8rem;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0.01em;
  color: #687690;
}
.hero .title {
  margin-top: 8px;
  font-size: 6.4rem;
  font-weight: 700;
  line-height: 1.19;
  /* 118.75% */
  color: #000336;
}
.hero .desc {
  margin-top: 30px;
  font-size: 1.8rem;
  font-weight: 400;
  line-height: 1.78;
  /* 177.778% */
  color: #5a6473;
}
.hero-cta {
  min-width: 170px;
  margin-top: 40px;
}
.hero-img {
  position: absolute;
  right: calc((100vw - 1110px) / 2 - 100px);
  bottom: 0;
}
/* ============= Clients ============ */
.clients {
  margin-top: 79px;
  padding: 43px 0 64px;
}
.clients .row {
  display: flex;
  justify-content: space-between;
}

.clients .desc {
  color: #7d8589;
  font-size: 1.6rem;
  font-weight: 500;
  line-height: 1.25; /* 125% */
}
.clients .row-desc {
  margin-top: 23px;
}

.clients .images {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 96px;
}
.clients .images a {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 90px;
  padding: 0 42px;
  border-radius: 12px;
}
.clients .images a:hover {
  background: #e3e3e3;
  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
}
/* ============= Guides ============ */

.guides {
  margin-top: 40px;
  padding: 93px 0 79px;
}
.guides .sub-title {
  position: relative;
  text-align: center;
  font-size: 3.5rem;
  font-weight: 600;
  line-height: 1; /* 100% */
  color: #000339;
}
.guides .sub-title::before {
  content: "";
  top: -10px;
  left: 50%;
  transform: translateX(-50%);
  position: absolute;
  display: inline-block;
  width: 41px;
  height: 4px;
  border-radius: 12px;
  background: #000339;
}
.guides .desc {
  width: 459px;
  max-width: 100%;
  margin: 20px auto 0;
  color: #5a6473;
  text-align: center;
  font-size: 1.6rem;
  font-weight: 400;
  line-height: 1.88; /* 187.5% */
}
.list-guide {
  display: flex;
  justify-content: center;
  margin-top: 70px;
}
.guide-item {
  margin: 0 70px;
  text-align: center;
}
.guide-item .title {
  margin-top: 26px;
  font-size: 2rem;
  font-weight: 500;
  line-height: 1.1; /* 110% */
  color: #3b3c45;
}
/* thẻ a không nhận margin-top ->thêm display inline-block*/
.guide-item .link {
  display: inline-block;
  margin-top: 10px;
  font-size: 1.4rem;
  font-weight: 600;
  color: #0689ff;
}
.guide-item .arrow {
  margin-left: 2px;
}
.guide-cta {
  display: flex;
  justify-content: center;
  margin-top: 50px;
}
.guide-cta .btn {
  min-width: 170px;
}
/* ============= Featured ============ */
.featured {
  margin-top: 41px;
  padding: 110px 0;
  background: #f5fafe;
}
.featured .sub-title {
  font-size: 3.5rem;
  font-weight: 600;
  line-height: 1; /* 100% */
  color: #000339;
}
.featured .row {
  margin-top: 15px;
  display: flex;
  justify-content: space-between;
}
.featured .desc {
  font-size: 1.6rem;
  font-weight: 400;
  line-height: 1.88; /* 187.5% */
  color: #5a6473;
}
.featured .link {
  display: flex;
  align-items: center;
  font-size: 1.8rem;
  font-weight: 600;
  color: #0689ff;
}
.featured .arrow {
  margin-left: 8px;
}
.featured .list {
  display: flex;
  gap: 30px;
  margin-top: 70px;
}
.featured .item {
  flex: 1;
  background: #fff;
  border-radius: 12px;
}
.featured .item .thumb {
  width: 100%;
  height: 227px;
  object-fit: cover;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
}
.featured .item .body {
  padding: 17px 20px 24px;
}
.featured .item .title a {
  font-size: 2rem;
  font-weight: 600;
  line-height: 1.5; /* 100% */
  color: #000339;
}
.featured .item .desc {
  --line-clamp: 3;
  margin-top: 11px;
  font-size: 1.4rem;
  line-height: 1.5;
  font-weight: 500;
  color: #a3a6ab;
}
.featured .item .info {
  display: flex;
  align-items: center;
  margin-top: 21px;
}
.featured .item .icon {
  margin-left: 23px;
}
.featured .item .icon:first-child {
  margin-left: 0;
}
.featured .item .label {
  margin-left: 8px;
  font-size: 1.4rem;
  font-weight: 500;
  letter-spacing: 0.14px;
  color: #4d4d52;
}
/* ============= Stats ============ */
.stats {
  margin-top: 75px;
  padding: 50px 0;
}
.stats .content {
  width: 1048px;
}
.stats .row {
  display: flex;
}
.stats .img-block,
.stats .info {
  width: 50%;
}
.stats .info {
  padding: 79px 0 0 165px;
}
.stats .img-block {
  position: relative;
}
.stats .img-block .image {
  display: block;
  margin-left: auto;
  width: 400px;
  height: 460px;
  border-radius: 12px;
  object-fit: cover;
}
.stats .stats-trend {
  position: absolute;
  top: 0;
  left: 0;
  width: 239px;
  padding: 45px 22px 40px;
  border-radius: 0px 0px 12px 12px;
  background: #fff;
}
.stats-trend .value {
  font-size: 2.6rem;
  font-weight: 700;
  letter-spacing: 0.26px;
  color: #000339;
}
.stats-trend .icon {
  margin-left: auto;
}
.stats-trend .desc {
  margin-top: 8px;
  font-size: 1.2rem;
  font-weight: 400;
  line-height: 1.5; /* 150% */
  color: #a7a7a7;
}
.stats-trend .separate {
  margin-top: 25px;
  height: 1.2px;
  background: #e9e9e9;
}
.stats-trend .avatar-block {
  display: flex;
  flex-wrap: wrap;
  gap: 16px 14px;
  margin-top: 26px;
}
.stats-trend .avatar-group {
  display: flex;
}
.stats-trend .avatar:first-child {
  margin-left: 0;
}
.stats-trend .avatar {
  width: 16px;
  height: 16px;
  margin-left: -3px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  color: #fff;
  font-size: 0.9rem;
  font-weight: 450;
  letter-spacing: -0.145px;
  background: var(--bg-color, #fff);
}
.stats .sub-title {
  position: relative;
  width: 269px;
  font-size: 3.5rem;
  font-weight: 600;
  line-height: 1.29; /* 128.571% */
  color: #000339;
}
.stats .sub-title::before {
  position: absolute;
  top: -10px;
  left: 0;
  content: "";
  display: block;
  width: 41px;
  height: 4px;
  border-radius: 12px;
  background: #000339;
}
.stats .info .desc {
  width: 309px;
  margin-top: 20px;
  color: #5a6473;
  font-size: 1.6rem;
  font-weight: 400;
  line-height: 1.88; /* 187.5% */
}
.stats .row-qty {
  justify-content: space-between;
  margin-top: 110px;
  padding: 0 32px;
}
.stats .qty {
  font-size: 6.4rem;
  font-weight: 600;
  line-height: 1; /* 100% */
  color: #000;
}
.stats .qty-desc {
  margin-top: 22px;
  font-size: 1.8rem;
  font-weight: 500;
  color: #7b8087;
}
/* ============= Subscription ============ */
.subscription {
  margin-top: 90px;
}
.subscription .body {
  position: relative;
  display: flex;
  align-items: center;
  height: 370px;
  border-radius: 20px;
  background: #063183;
}
.subscription .info {
  padding: 0 80px;
  width: 671px;
  max-width: 100%;
}
.subscription .sub-title {
  font-size: 3.5rem;
  font-weight: 600;
  line-height: 1.5;
  color: #1b0707;
}
.subscription .desc {
  margin-top: 15px;
  font-size: 1.6rem;
  font-weight: 400;
  line-height: 1.88; /* 187.5% */
  color: #fff;
  opacity: 0.75;
}
.subscription .btn {
  margin-top: 20px;
  min-width: 151px;
  background: #fff;
  color: #002366;
}
.subscription .image {
  position: absolute;
  right: 221px;
  bottom: 0;
}
/* ============= Footer ============ */
.footer {
  margin-top: 55px;
  padding: 50px 0 58px;
}
.footer .row-top {
  display: flex;
  gap: 185px;
}
.footer .heading {
  font-family: "Lato", sans-serif;
  font-size: 2rem;
  font-weight: 700;
  color: #1c1c1d;
}
.footer .list,
.footer .desc {
  margin-top: 42px;
}
.footer .item {
  margin-top: 18px;
}
.footer .item a {
  margin-top: 18px;
  font-size: 1.6rem;
  font-weight: 400;
  white-space: nowrap;
  color: #7a7a7e;
}
.footer .desc {
  font-size: 1.6rem;
  font-weight: 400;
  line-height: 1.75; /* 175% */
  color: #7a7a7e;
}
.footer .social {
  display: flex;
  margin-top: 40px;
  gap: 10px;
}
.footer .social-link {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 28px;
  height: 28px;
  border-radius: 3px;
  background: #f9f9f9;
}
.footer .social-link + .social-link {
  margin-left: 16px;
}
.footer .social-link:hover {
  background: #ebebeb;
}
.footer .row-bottom {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 81px;
}
.footer .copyright {
  font-size: 1.4rem;
  font-weight: 400;
  color: #c2c2c2;
}

